Refactoring to allow multiple aspect paths